# python-data-aula

./: .gitignore  README.md  a2.ipynb  main.ipynb  pyproject.toml  trainexcel.xlsx
data/: train.csv
src/: main.ipynb
src/notebooks/: a1.ipynb  a2.ipynb  a3.ipynb
src/notebooks/1/: a3.ipynb
src/notebooks/2/Aula 2 - Outliers/: substituindo_outliers.ipynb  tratando_outliers.ipynb
src/notebooks/2/Aula 3 - Variáveis Categóricas/: OneHotEncoder.ipynb  categoricas.ipynb
src/notebooks/2/Aula 4 - Conceitos de Modelagem/: modelagem.ipynb
src/notebooks/2/Aula 6 - Regressão Logística/: train.csv
src/notebooks/2/Aula 7 - K Means Clustering/: clusterizacao_k_means.ipynb
src/notebooks/2/Aula 8 - Projeto Final/: projeto_final.ipynb
src/notebooks/3/Aula 1 - SVM/: aula_svm.ipynb
src/notebooks/3/Aula 2 - Naive Bayes/: aula_naive_bayes.ipynb
src/notebooks/3/Aula 3 - Árvore de Decisão/: aula_arvore_classifier.ipynb  aula_arvore_regressor.ipynb
src/notebooks/3/Aula 5 - Random Forest/: random_forest.ipynb
src/notebooks/3/Aula 6 - Boosting/: boosting.ipynb
src/notebooks/3/Aula 7 - Feature Selection/: feature_selection.ipynb
src/notebooks/3/Aula 8 - Cross Validation/: cross_validation.ipynb
src/notebooks/3/Aula 9 - Pickle/: modelo.sav  pickle.ipynb
src/notebooks/Aula 1 - Data Prep/: DataCleaning.ipynb
src/notebooks/Aula 3 - Variáveis Categóricas/: LabelEncoder.ipynb  listings.csv
src/notebooks/Aula 5 - Regressão Linear/: reg_lin.ipynb  regressao_linear.ipynb
src/notebooks/Aula 6 - Regressão Logística/: regressao_logistica.ipynb  train.xlsx
